--- a/src/app/bills/bills.html
+++ b/src/app/bills/bills.html
@@ -3,7 +3,7 @@
 <div>
   <div ng-repeat="bill in BillsCtrl.bills">
     <a ui-sref="bills.detail({id: bill.id})">
-      <span ng-bind="bill.name"></span>
+      <span ng-bind="bill.attributes.title"></span>
     </a>
   </div>
 </div>
