twitter share link

--- a/src/app/bill/bill.html
+++ b/src/app/bill/bill.html
@@ -1,1 +1,3 @@
 <h2>bill.html</h2>
+
+<a ng-href="https://twitter.com/home?status=I%20support%20%23{{BillCtrl.hashtagBill}}%20Show%20your%20support,%20vote%20%23{{BillCtrl.hashtagYes}}%20at%20{{BillCtrl.billLink}}%20%23flvote%20%23tabsontally%20%40CodeForOrlando%20%40tabsontally">https://twitter.com/home?status=I%20support%20%23{{BillCtrl.hashtagBill}}%20Show%20your%20support,%20vote%20%23{{BillCtrl.hashtagYes}}%20at%20{{BillCtrl.billLink}}%20%23tabsontally%20%40CodeForOrlando%20%40tabsontally</a>
