--- a/src/app/partials/header.html
+++ b/src/app/partials/header.html
@@ -1,3 +1,20 @@
+<div class="container">
+    <img src="../assets/img/tabs-icon.png" alt="logo">
+    <h1>Vote with a Tweet!</h1>
+    <p>Welcome! Use FLVote to harness Twitter to influence Bills in the Florida Legislature.</p>
+
+<h3>Vote Yes or No in just 3 easy steps:</h3>
+<ol>
+    <li> Pick the Bill</li>
+    <li>Vote Yes or No to create your tweet</li>
+    <li>Share it on Twitter</li>
+</ol>
+
+<p>Promote your views or add your favorite hashtag by customizing your tweet before sharing. If someone ReTweets yours, then that’s another vote for your side.</p>
+
+<p>We don’t store any of your info. The conversation happens out on the Twitterverse.
+    </p>
 <hr>
-<h2>header.html</h2>
-<hr>
+
+</div>
+
