--- a/src/app/bills/bills.html
+++ b/src/app/bills/bills.html
@@ -40,7 +40,7 @@
         </tr>
     </table>
   <div ng-repeat="bill in BillsCtrl.bills">
-    <a ui-sref="bills.detail({id: bill.id})">
+    <a ui-sref="bills.detail({id: bill.billId})">
       <span ng-bind="bill.attributes.title"></span>
       <a class="btn btn-default" target="_blank"
       	ng-href="{{bill.voteYesLink}}">Vote #yes</a>
