--- a/src/app/partials/header.html
+++ b/src/app/partials/header.html
@@ -1,7 +1,17 @@
+
 <div class="container">
-    <img src="../assets/img/tabs-icon.png" alt="logo">
+ <img class="logo" src="../app/assets/img/tabs-masthead.png" alt="logo">
+ <div class="title"><h1>#FLVote</h1></div>
+</div>
+
+<hr>
+
+
+
+<div class="container">
+   
     <h1>Vote with a Tweet!</h1>
-    <p>Welcome! Use FLVote to harness Twitter to influence Bills in the Florida Legislature.</p>
+    <p>Welcome! Use #FLVote to harness Twitter to influence Bills in the Florida Legislature.</p>
 
 <h3>Vote Yes or No in just 3 easy steps:</h3>
 <ol>
