floating buttons right

--- a/src/app/bills/bills.html
+++ b/src/app/bills/bills.html
@@ -11,8 +11,14 @@
     </a>
   </div>
     <button type="button" class="btn btn-primary" ng-click="BillsCtrl.getNextPage()">LOAD MORE</button>
-    <button type="button" class="btn btn-info">SORT</button>
-    <div class="sort">
+    
+    
+    
+      <!--<button type="button" class="btn btn-info">SORT</button>
+    
+    
+    
+  <div class="sort">
             <h2>What Interests You?</h2>
             Sorting box goes here.<br>
         <div class="container">
@@ -21,7 +27,7 @@
         </div>
      
        <br> Sorted item goes here.
-    </div>
+    </div>   -->
     
     <hr>
     
