fixing screen size button issues

--- a/src/app/assets/css/custom.css
+++ b/src/app/assets/css/custom.css
@@ -58,3 +58,15 @@ a {
     
 }
 
+.glyphicon {
+        margin-right: 10px;
+}
+
+
+
+@media (max-width: 990px) {
+  a {
+    clear: left;
+    display: block;
+  }
+}
