fix: vote link goes to new tab

--- a/src/app/partials/header.html
+++ b/src/app/partials/header.html
@@ -24,7 +24,7 @@
             		<h2>Are you Registered to Vote in FL?</h2>
                 	<p>The first step to making a real difference in your community is registering to vote!</p>
                 	<br/>
-                	<p class="text-center"><a href="http://www.dmv.org/fl-florida/voter-registration.php" class="btn btn-primary btn-block btn-lg">Register Now</a></p>
+                	<p class="text-center"><a href="http://www.dmv.org/fl-florida/voter-registration.php" target="_blank" class="btn btn-primary btn-block btn-lg">Register Now</a></p>
             	</div>
                 
             </div>
