--- a/src/app/bills/bills.html
+++ b/src/app/bills/bills.html
@@ -2,15 +2,18 @@
         <h1>Recent Bills</h1>
     
   <div class="bill" ng-repeat="bill in BillsCtrl.bills">
-    <a class="billhover" ui-sref="bills.detail({id: bill.id})">
-      <span ng-bind="bill.attributes.title"></span>
-      <a class="btn btn-success vote" target="_blank"
-      	ng-href="{{bill.voteYesLink}}"><span class="glyphicon glyphicon-menu-up"></span>Vote #yes</a>
-      <a class="btn btn-danger vote" target="_blank"
+    <a ui-sref="bills.detail({id: bill.id})">  
+        <span class="billhover" ng-bind="bill.attributes.title"></span></a>
+        
+        <a class="btn btn-danger vote" target="_blank"
          ng-href="{{bill.voteNoLink}}"><span class="glyphicon glyphicon-menu-down"></span> Vote #no</a>
-    </a>
+        
+      <a class="btn btn-success vote" target="_blank"
+      	ng-href="{{bill.voteYesLink}}"><span class="glyphicon glyphicon-menu-up"></span> Vote #yes</a>
+      
+  
   </div>
-    <button type="button" class="btn btn-primary" ng-click="BillsCtrl.getNextPage()">LOAD MORE</button>
+    <button type="button" class="btn btn-primary loadmore" ng-click="BillsCtrl.getNextPage()">LOAD MORE</button>
     
     
     
