--- a/src/app/bill/bill.html
+++ b/src/app/bill/bill.html
@@ -5,7 +5,7 @@
 <div ng-repeat="doc in BillCtrl.bill.attributes.documents" style="margin:5px;">
 	{{doc.note}}
 	<div ng-repeat="link in doc.links" style="margin-left:10px;">
-		<a ng-href="link.url" >{{link.url}}</a>
+		<a ng-href="{{link.url}}" target="_blank">{{link.url}}</a>
 	</div>
 	
 </div>
