--- a/src/app/bills/bills.html
+++ b/src/app/bills/bills.html
@@ -2,7 +2,7 @@
         <h1>Recent Bills</h1>
     
   <div class="bill" ng-repeat="bill in BillsCtrl.bills">
-    <a ui-sref="bills.detail({id: bill.id})">
+    <a ui-sref="bills.detail({id: bill.billId})">
       <span class="billhover">{{bill.attributes.identifier}}: {{bill.attributes.title}}</span>
       <a class="btn btn-danger vote" target="_blank"
          ng-href="{{bill.voteNoLink}}"><span class="glyphicon glyphicon-menu-down"></span>Vote #no <strong>{{bill.twitterVotes.no}}</strong></a>
