Better styles for different devices (not perfect!)

--- a/src/app/bills/bills.html
+++ b/src/app/bills/bills.html
@@ -2,14 +2,29 @@
         <h1>Recent Bills</h1>
     
   <div class="bill" ng-repeat="bill in BillsCtrl.bills">
-    <a ui-sref="bills.detail({id: bill.id})">  
-        <span class="billhover" ng-bind="bill.attributes.title"></span></a>
+      
+    <div class="bill-left">
+      
+         <a ui-sref="bills.detail({id: bill.id})">  
+        <span class="billhover billname" ng-bind="bill.attributes.title">
+        </a>
+             </div>
         
-        <a class="btn btn-danger vote" target="_blank"
+        <div class="bill-right">
+         <a class="btn btn-danger vote" target="_blank"
          ng-href="{{bill.voteNoLink}}"><span class="glyphicon glyphicon-menu-down"></span> Vote #no</a>
         
       <a class="btn btn-success vote" target="_blank"
       	ng-href="{{bill.voteYesLink}}"><span class="glyphicon glyphicon-menu-up"></span> Vote #yes</a>
+            </div>
+      
+      </div>
+ 
+        
+        
+        </div>
+        
+       
       
   
   </div>
