--- a/src/app/partials/header.html
+++ b/src/app/partials/header.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <img class="logo" src="../app/assets/img/tabs-masthead.png" alt="logo">
+    <a href="/"><img class="logo" src="../app/assets/img/tabs-masthead.png" alt="logo"></a>
     <div class="title">
         <h1>#FLVote</h1></div>
 </div>
