fixed footer styles

--- a/src/app/assets/css/custom.css
+++ b/src/app/assets/css/custom.css
@@ -103,7 +103,10 @@ a {
         float: left;
     
     }
-    
-    
-    
+        
 }
+
+    ol, li {
+        font-size: 1.75rem;
+        
+    }
