--- a/src/app/bills/bills.html
+++ b/src/app/bills/bills.html
@@ -23,9 +23,13 @@
         
         </div>
         
-       
+     
+
+<button type="button" class="btn btn-primary loadmore" ng-click="BillsCtrl.getNextPage()">LOAD MORE</button>
   </div>
-    <button type="button" class="btn btn-primary loadmore" ng-click="BillsCtrl.getNextPage()">LOAD MORE</button>
+    
+
+
     
     
     
@@ -46,7 +50,7 @@
     
     <hr>
     
-    <div class="footer">
+    <div class="footer container">
        <p>Thanks to <a href="http://tabsontallahassee.com"> Tabs on Tallahassee</a> for providing tools to get the latest Florida Legislature info.</p> 
     
     </div>
