--- a/src/app/partials/header.html
+++ b/src/app/partials/header.html
@@ -1,34 +1,7 @@
 <div class="container">
     <a href="/"><img class="logo" src="../app/assets/img/tabs-masthead.png" alt="logo"></a>
     <div class="title">
-        <h1>#FLVote</h1></div>
+        <h1>#FLVote</h1>
+    </div>
 </div>
 <hr>
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-md-8">
-            <h1>Vote with a Tweet!</h1>
-            <p>Welcome! Use #FLVote to harness Twitter to influence Bills in the Florida Legislature.</p>
-            <h3>Vote Yes or No in just 3 easy steps:</h3>
-            <ol>
-                <li>Pick the Bill</li>
-                <li>Vote Yes or No to create your tweet</li>
-                <li>Share it on Twitter</li>
-            </ol>
-            <p>Promote your views or add your favorite hashtag by customizing your tweet before sharing. If someone ReTweets yours, then that’s another vote for your side.</p>
-            <p>We don’t store any of your info. The conversation happens out on the Twitterverse.</p>
-        </div>
-        <div class="col-xs-12 col-md-4">
-            <div class="panel panel-default">
-            	<div class="panel-body text-center">
-            		<h2>Are you Registered to Vote in FL?</h2>
-                	<p>The first step to making a real difference in your community is registering to vote!</p>
-                	<br/>
-                	<p class="text-center"><a href="http://dos.myflorida.com/elections/for-voters/voter-registration/register-to-vote-or-update-your-information/" target="_blank" class="btn btn-primary btn-block btn-lg">Register Now</a></p>
-            	</div>
-                
-            </div>
-        </div>
-    </div>
-    <hr>
-</div>
