--- a/src/app/bills/bills.html
+++ b/src/app/bills/bills.html
@@ -1,60 +1,85 @@
 <div class="container">
-        <h1>Recent Bills</h1>
-    
-  <div class="bill" ng-repeat="bill in BillsCtrl.bills">
-      
-    <div class="bill-left">
-      
-        <a ui-sref="bills.detail({id: bill.billId})">
-        <span class="billhover billname" ng-bind="bill.attributes.title">
-        </a>
-             </div>
-        
-        <div class="bill-right">
-              <a class="btn btn-danger vote" target="_blank"
-         ng-href="{{bill.voteNoLink}}"><span class="glyphicon glyphicon-menu-down"></span>Vote #no <strong>{{bill.twitterVotes.no}}</strong></a>
-        
-      <a class="btn btn-success vote" target="_blank"
-        ng-href="{{bill.voteYesLink}}"><span class="glyphicon glyphicon-menu-up"></span>Vote #yes <strong>{{bill.twitterVotes.yes}}</strong></a>
-    </a>
+
+    <!-- Register To Vote -->
+    <div class="row">
+        <div class="col-xs-12 col-md-8">
+            <h1>Vote with a Tweet!</h1>
+            <p>Welcome! Use #FLVote to harness Twitter to influence Bills in the Florida Legislature.</p>
+            <h3>Vote Yes or No in just 3 easy steps:</h3>
+            <ol>
+                <li>Pick the Bill</li>
+                <li>Vote Yes or No to create your tweet</li>
+                <li>Share it on Twitter</li>
+            </ol>
+            <p>Promote your views or add your favorite hashtag by customizing your tweet before sharing. If someone
+                ReTweets yours, then that’s another vote for your side.</p>
+            <p>We don’t store any of your info. The conversation happens out on the Twitterverse.</p>
+        </div>
+        <div class="col-xs-12 col-md-4">
+            <div class="panel panel-default">
+                <div class="panel-body text-center">
+                    <h2>Are you Registered to Vote in FL?</h2>
+                    <p>The first step to making a real difference in your community is registering to vote!</p>
+                    <br/>
+                    <p class="text-center"><a
+                            href="http://dos.myflorida.com/elections/for-voters/voter-registration/register-to-vote-or-update-your-information/"
+                            target="_blank" class="btn btn-primary btn-block btn-lg">Register Now</a></p>
+                </div>
+
             </div>
-      
-      </div>
-        
         </div>
-        
-     
-
-<button type="button" class="btn btn-primary loadmore" ng-click="BillsCtrl.getNextPage()">LOAD MORE</button>
-  </div>
-    
-
-
-    
-    
-    
-      <!--<button type="button" class="btn btn-info">SORT</button>
-    
-    
-    
-  <div class="sort">
-            <h2>What Interests You?</h2>
-            Sorting box goes here.<br>
-        <div class="container">
-           <button type="button" class="btn btn-success">GO!</button>
-        <button type="button" class="btn btn-danger">CLEAR</button>
-        </div>
-     
-       <br> Sorted item goes here.
-    </div>   -->
-    
-    <hr>
-    
-    <div class="footer container">
-       <p>Thanks to <a href="http://tabsontallahassee.com"> Tabs on Tallahassee</a> for providing tools to get the latest Florida Legislature info.</p> 
-    
     </div>
-    
+
+    <!-- Bills List -->
+    <h1>Recent Bills</h1>
+    <div class="bill" ng-repeat="bill in BillsCtrl.bills">
+
+        <div class="bill-left">
+            <a ui-sref="bills.detail({id: bill.billId})">
+                <span class="billhover billname" ng-bind="bill.attributes.title"></span>
+            </a>
+        </div>
+
+        <div class="bill-right">
+            <a class="btn btn-danger vote" target="_blank" ng-href="{{bill.voteNoLink}}">
+                <span class="glyphicon glyphicon-menu-down"></span>Vote #no
+                <strong>{{bill.twitterVotes.no}}</strong>
+            </a>
+
+            <a class="btn btn-success vote" target="_blank" ng-href="{{bill.voteYesLink}}">
+                <span class="glyphicon glyphicon-menu-up"></span>Vote #yes
+                <strong>{{bill.twitterVotes.yes}}</strong>
+            </a>
+            
+            <div class="clearfix"></div>
+        </div>
+
+    </div>
+
+    <button type="button" class="btn btn-block btn-lg btn-primary loadmore" ng-click="BillsCtrl.getNextPage()">LOAD MORE</button>
 </div>
-  </body>
-</html>
+
+
+<!--<button type="button" class="btn btn-info">SORT</button>
+
+
+
+<div class="sort">
+      <h2>What Interests You?</h2>
+      Sorting box goes here.<br>
+  <div class="container">
+     <button type="button" class="btn btn-success">GO!</button>
+  <button type="button" class="btn btn-danger">CLEAR</button>
+  </div>
+
+ <br> Sorted item goes here.
+</div>   -->
+
+<hr>
+
+<div class="footer container">
+    <p>Thanks to <a href="http://tabsontallahassee.com"> Tabs on Tallahassee</a> for providing tools to get the latest
+        Florida Legislature info.</p>
+
+</div>
+
