feat: Getting started on searching and filtering

--- a/src/app/bill/bill.html
+++ b/src/app/bill/bill.html
@@ -1,26 +1,20 @@
 <div class="container">
     <h2>{{BillCtrl.bill.attributes.identifier}}: {{BillCtrl.bill.attributes.title}}</h2>
-    <h3>
-        Legislative Session:
-        <span ng-bind="BillCtrl.bill.attributes.legislative_session.name"></span>
-    </h3>
 
     <a class="btn btn-danger vote" target="_blank" ng-href="{{BillCtrl.bill.voteNoLink}}"><span
             class="glyphicon glyphicon-menu-down"></span>Vote #no <strong>{{BillCtrl.bill.twitterVotes.no}}</strong></a>
     <a class="btn btn-success vote" target="_blank" ng-href="{{BillCtrl.bill.voteYesLink}}"><span
             class="glyphicon glyphicon-menu-up"></span>Vote #yes <strong>{{BillCtrl.bill.twitterVotes.yes}}</strong></a>
 
-    <p><strong>Subjects:</strong> <span ng-repeat="subject in BillCtrl.bill.attributes.subject" style="margin:5px">{{subject}}</span>
-    </p>
+    <h3>
+        Legislative Session:
+        <span ng-bind="BillCtrl.bill.attributes.legislative_session.name"></span>
+    </h3>
 
-    <hr>
-    <p><strong>Learn More (Documents):</strong></p>
-    <div ng-repeat="doc in BillCtrl.bill.attributes.documents" style="margin:5px;">
-        {{doc.note}}
-        <div ng-repeat="link in doc.links" style="margin-left:10px;">
-            <a ng-href="{{link.url}}" target="_blank">{{link.url}}</a>
-        </div>
-    </div>
+    <p>
+        <strong>Subjects:</strong>
+        <a ng-href="/?subject={{subject}}" ng-repeat="subject in BillCtrl.bill.attributes.subject" class="badge" style="margin:5px">{{subject}}</a>
+    </p>
 
     <hr>
     <p><strong>Sources:</strong></p>
@@ -28,6 +22,15 @@
         <span>{{ source.note }}</span>
         <div>
             <a ng-href="{{source.url}}" target="_blank">{{source.url}}</a>
+        </div>
+    </div>
+
+    <hr>
+    <p><strong>Learn More (Documents):</strong></p>
+    <div ng-repeat="doc in BillCtrl.bill.attributes.documents" style="margin:5px;">
+        {{doc.note}}
+        <div ng-repeat="link in doc.links" style="margin-left:10px;">
+            <a ng-href="{{link.url}}" target="_blank">{{link.url}}</a>
         </div>
     </div>
 
