--- a/src/app/bills/bills.html
+++ b/src/app/bills/bills.html
@@ -32,12 +32,30 @@
 
     <!-- Bills List -->
     <h1>Recent Bills</h1>
+    <div class="row">
+        <form class="form-inline">
+          <div class="col-md-6">
+            <div class="form-group">
+              <input type="text" class="form-control" id="query" ng-model="query" placeholder="Search">
+              <button type="submit" class="btn btn-default" ng-click="BillsCtrl.fetchBills(query)">Submit</button>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <label ng-show="BillsCtrl.subject">Filtering By Subject:</label>
+            <a href="/"class="badge" ng-click="BillsCtrl.subject = ''" ng-bind="BillsCtrl.subject"></a>
+          </div>
+        </form>
+    </div>
     <div class="bill" ng-repeat="bill in BillsCtrl.bills">
 
         <div class="bill-left">
+          <div>
+            <strong ng-bind="bill.attributes.identifier"></strong>
             <a ui-sref="bills.detail({id: bill.billId})">
                 <span class="billhover billname" ng-bind="bill.attributes.title"></span>
             </a>
+          </div>
+            <a ng-href="/?subject={{subject}}" ng-repeat="subject in bill.attributes.subject" class="badge" style="margin:5px">{{subject}}</a>
         </div>
 
         <div class="bill-right">
