--- a/src/app/bills/bills.html
+++ b/src/app/bills/bills.html
@@ -72,6 +72,7 @@
             <div class="clearfix"></div>
         </div>
 
+        <div class="clearfix"></div>
     </div>
 
     <button type="button" class="btn btn-block btn-lg btn-primary loadmore" ng-click="BillsCtrl.getNextPage()">LOAD MORE</button>
