--- a/src/app/bill/bill.html
+++ b/src/app/bill/bill.html
@@ -17,6 +17,33 @@
     </p>
 
     <hr>
+    <p><strong>Actions:</strong></p>
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Date</th>
+                <th>Action</th>
+                <th>Organization</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="action in BillCtrl.bill.attributes.actions">
+                <td><strong>{{action.order + 1}}</strong></td>
+                <td>{{action.date}}</td>
+                <td>{{action.description}}</td>
+                <td>{{action.organization.name}} ({{action.organization.classification}})</td>
+            </tr>
+        </tbody>
+    </table>
+    <!-- <div >
+        <span>{{ action.note }}</span>
+        <div>
+            <a ng-href="{{source.url}}" target="_blank">{{source.url}}</a>
+        </div>
+    </div> -->
+
+    <hr>
     <p><strong>Sources:</strong></p>
     <div ng-repeat="source in BillCtrl.bill.attributes.sources">
         <span>{{ source.note }}</span>
@@ -25,14 +52,18 @@
         </div>
     </div>
 
-    <hr>
-    <p><strong>Learn More (Documents):</strong></p>
-    <div ng-repeat="doc in BillCtrl.bill.attributes.documents" style="margin:5px;">
-        {{doc.note}}
-        <div ng-repeat="link in doc.links" style="margin-left:10px;">
-            <a ng-href="{{link.url}}" target="_blank">{{link.url}}</a>
+    
+    <span ng-if="BillCtrl.bill.attributes.documents.length > 0">
+        <hr>
+        <p><strong>Learn More (Documents):</strong></p>
+        <div ng-repeat="doc in BillCtrl.bill.attributes.documents" style="margin:5px;">
+            {{doc.note}}
+            <div ng-repeat="link in doc.links" style="margin-left:10px;">
+                <a ng-href="{{link.url}}" target="_blank">{{link.url}}</a>
+            </div>
         </div>
-    </div>
+    </span>
+    
 
     <hr>
     <p><strong>Sponsorships:</strong></p>
