feat: Add header nav & about page & contact page

--- a/src/public/app/partials/header.html
+++ b/src/public/app/partials/header.html
@@ -1,6 +1,25 @@
 <div class="container">
-    <a href="/"><img class="logo" src="../app/assets/img/tabs-masthead.png" alt="logo"></a>
-    <div class="title">
-        <h1>#FLVote</h1>
-    </div>
+	<div class="row">
+		<div class="col-md-12">
+    		<a href="/"><img class="logo" src="../app/assets/img/tabs-masthead.png" alt="logo"></a>	
+    		<div class="title">
+		        <h1>#FLVote	</h1>
+		    </div>	
+		</div>
+		<!-- <div class="col-md-6">
+			
+		</div> -->
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<ul class="nav nav-tabs pull-right">
+				{{window.location.pathname}}
+			  <li role="presentation"><a href="/">Home</a></li>
+			  <li role="presentation"><a href="/about">About</a></li>
+			  <li role="presentation"><a href="/contact">Contact</a></li>
+			</ul>
+		</div>
+	</div>
+
+    
 </div>
