style: header layout

--- a/src/public/app/partials/header.html
+++ b/src/public/app/partials/header.html
@@ -1,23 +1,20 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-12">
-    		<a href="/"><img class="logo" src="../app/assets/img/tabs-masthead.png" alt="logo"></a>	
-    		<div class="title">
-		        <h1>#FLVote	</h1>
-		    </div>	
+		<div class="col-md-3">
+    		<a href="/"><img style="width:100%; padding:20px 0;" src="../app/assets/img/flvote-tot-logo.png" alt="logo"></a>	
 		</div>
-		<!-- <div class="col-md-6">
-			
-		</div> -->
-	</div>
-	<div class="row">
-		<div class="col-md-12">
-			<ul class="nav nav-tabs pull-right">
+		<div class="col-md-9">
+			<ul class="nav nav-pills pull-right" style="margin:20px 0;">
 				{{window.location.pathname}}
 			  <li role="presentation"><a href="/">Home</a></li>
 			  <li role="presentation"><a href="/about">About</a></li>
 			  <li role="presentation"><a href="/contact">Contact</a></li>
 			</ul>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			
 		</div>
 	</div>
 
