fix: total votes

--- a/src/public/app/partials/header.html
+++ b/src/public/app/partials/header.html
@@ -1,28 +1,27 @@
 <div class="container">
-	<div class="row">
-		<div class="col-xs-3">
-    		<a href="/"><img style="width:100%; padding:20px 0;" src="../app/assets/img/flvote-tot-logo.png" alt="logo"></a>	
-		</div>
-		<div class="col-xs-9 text-align:right">
-			<div>
-				<ul class="nav nav-pills pull-right" style="margin:20px 0 10px;">
-			  <li role="presentation"><a href="/">Home</a></li>
-			  <li role="presentation"><a href="/about">About</a></li>
-			  <li role="presentation"><a href="/contact">Contact</a></li>
-			</ul>
-			<div class="clearfix"></div>
-			</div>
-			<h3 class="pull-right" style="margin-top:0">Total #FLVotes: <span class="label label-primary label-lg" style="font-size:20px">{{BillsCtrl.totalVotes}}</span></h3>
-			
-			
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-12">
-			
-		</div>
-	</div>
+  <div class="row">
+    <div class="col-xs-3">
+      <a href="/"><img style="width:100%; padding:20px 0;" src="../app/assets/img/flvote-tot-logo.png" alt="logo"></a>
+    </div>
+    <div class="col-xs-9 text-align:right">
+      <div>
+        <ul class="nav nav-pills pull-right" style="margin:20px 0 10px;">
+          <li role="presentation"><a href="/">Home</a></li>
+          <li role="presentation"><a href="/about">About</a></li>
+          <li role="presentation"><a href="/contact">Contact</a></li>
+        </ul>
+        <div class="clearfix"></div>
+      </div>
+      <h3 class="pull-right" style="margin-top:0">Total #FLVotes: <span class="label label-primary label-lg" style="font-size:20px">{{totalVotes}}</span></h3>
 
-    
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+
+    </div>
+  </div>
+
+
 </div>
 <div class="clearboth"></div>
