--- a/src/public/app/partials/header.html
+++ b/src/public/app/partials/header.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-3">
+    <div class="col-xs-4 col-sm-3">
       <a href="/"><img style="width:100%; padding:20px 0;" src="../app/assets/img/flvote-tot-logo.png" alt="logo"></a>
     </div>
-    <div class="col-xs-9 text-align:right">
+    <div class="col-xs-12 col-sm-9 text-align:right">
       <div>
         <ul class="nav nav-pills pull-right" style="margin:20px 0 10px;">
           <li role="presentation"><a href="/">Home</a></li>
